Corrected vertical spacing by removing line-height values and instead using margin-bottom on links where necessary.

--- a/src/components/Navigation/styles.scss
+++ b/src/components/Navigation/styles.scss
@@ -2,7 +2,7 @@
 .wrapper {
 	width: 100%;
 	height: 100%;
-	font-size: 2rem;
+	font-size: 1.5rem;
 	background-color: red;
 }
 
@@ -52,7 +52,7 @@
 	}
 
 		.link {
-			font-size: 2.25em;
+			font-size: 2.8em;
 
 			a {
 				text-decoration: none;
@@ -62,37 +62,46 @@
 // Mobile landscape
 @media (orientation: landscape) {
 	.wrapper {
-		font-size: 1.25rem;
+		font-size: 1rem;
 		background-color: red;
 	}
 
 		.menu {
-			padding-top: 15vh;
+			padding-top: 10vh;
+			line-height: 1.25;
 		}
 }
 
 // Tablet portrait
 @media (min-width: 768px) {
 	
-	.button {
-		right: 50%;
-		transform: translateX(50%);
+	.wrapper {
+		font-size: 1.75rem;
 	}
 
-	.menu {
-		line-height: 1.5;
-	}
+		.button {
+			right: 50%;
+			transform: translateX(50%);
+		}
+
+		.menu {
+			padding-top: 15vh;
+		}
+
+			.link {
+				margin-bottom: 1rem;
+			}
 }
 
 // Tablet landscape
 @media (min-width: 768px) and (orientation: landscape) {
 	.wrapper {
-		font-size: 2rem;
+		font-size: 1.5rem;
 	}
 
-		.menu {
-			line-height: 1.3;
-		}
+			.link {
+				margin-bottom: 0;
+			}
 }
 
 // Desktop portrait
@@ -110,13 +119,13 @@
 			top: 1.875rem;
 		}
 
-
 		.menu {
 			padding-top: 20vh;
 		}
 
 			.link {
 				font-size: 4.5em;
+				margin-bottom: 0;
 			}
 }
 
